# django-spaces-calendar

./: Readme.md  setup.cfg
spaces_calendar/: __init__.py  apps.py  decorators.py  forms.py  models.py  signals.py  urls.py  views.py
spaces_calendar/migrations/: 0001_initial.py  0002_auto_20151111_1046.py  0003_auto_20151117_1129.py  0004_auto_20160111_1024.py  0005_calendarevent_author.py
spaces_calendar/templates/spaces_calendar/: add_event.html  base.html  event_detail.html  icon.html  monthly_view.html  quarterly_view.html
spaces_calendar/templates/spaces_calendar/includes/: event_form_part.html  full_event_form.html  month_list.html
spaces_calendar/templates/swingtime/: daily_view.html  monthly_view.html  occurrence_detail.html
spaces_calendar/templatetags/: calendar_tags.py
